firmware/defmt-test/macros/tests/ui/after_each-has-invalid-function-signature.stderr
error: `#[after_each]` function must have signature `fn()` or `fn(state: &mut T)`
 --> tests/ui/after_each-has-invalid-function-signature.rs:6:8
  |
6 |     fn hello(a: i32, b: i32) -> i32 {
  |        ^^^^^
